# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  spec.yaml
.sqlx/: query-4ff67abfcc9a54f4b3ea8d5ebaf96bfd4d8d6fc3a0deb9ac85a50d413308cfc7.json
configuration/: base.yaml  production.yaml
migrations/: 20250712075742_create_subscriptions_table.sql  20250716012512_add_status_to_subscriptions.sql  20250716015413_make_status_no_null_in_subscriptions.sql  20250716030350_create_subscription_tokens_table.sql  20250722013137_rename_password_column.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
