[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
postgres = "0.19.10"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
    "runtime-tokio-native-tls",
] }
config = "0.15.13"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
# env_logger = "0.11.8"
# log = "0.4.27"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.18"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.20.0"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_json = "1.0.140"


[dev-dependencies]
fake = "~3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.4"
linkify = "0.10.0"

# # 
# [target.x86_64-apple-darwin]
# rustflags = ["- C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
